2005-05-18  Al Riddoch  <alriddoch@zepler.org>

	* tests/testShaderFactory.cpp: Forgot to add test.

2005-05-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TileShader.cpp: Delete subShaders from destructor.

	* Mercator/DepthShader.cpp, Mercator/DepthShader.h,
	  Mercator/FillShader.cpp, Mercator/FillShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h,
	  Mercator/Shader.h: Add a second constructor to all shaders
	  which takes a generic parameter map type, to allow creation
	  of shaders to be automated.

	* Mercator/ShaderFactory.h, Mercator/ShaderFactory.cpp,
	  Mercator/ShaderFactory_impl.h: New factory classes to handle
	  creating shaders from a string giving the shader type.

	* tests/testShaderFactory.cpp: Test for new shader factory classes.

2005-05-09  James Turner  <james@worldforge.org>

	* Mercator/AreaShader.cpp: zero out the Buffer before shading it,
	  to avoid problems if the memory allocator doesn't zero it for us.

2005-05-08  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Set date on 0.2.2 release entry.

	* configure.ac: Increment interface version for release.

	* Release 0.2.2, interface version 3.

2005-05-08  James Turner  <james@worldforge.org>

	* Mercator/Terrain.cpp: when adding an area, if the segment already has
	  a shader for the area's layer, mark the surface as invalid.
	
	* Mercator/Segment.h, Mercator/Segment.cpp: rename 'getBox' to 'getRect',
	  and make a real 'getBox' that returns an AxisBox<3>, where the z values
	  are defined by the min and max height of the segment.
	
	* Mercator/AreaShader.cpp: update for the changed Segment API

2005-05-08  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.cpp, Mercator/Area.h, Mercator/Buffer.h,
	  Mercator/Buffer_impl.h, Mercator/GrassShader.cpp,
	  Mercator/Shader.cpp, Mercator/Shader.h, Mercator/Surface.cpp,
	  Mercator/Surface.h: Surfaces now have a const reference to Segment