@@ -15,5 +15,6 @@ timeSeg
 testPlant
 testForest
 testQRNG
+testWFMath
 test1.pgm
 test2.pgm
