@@ -1,10 +1,10 @@
-TESTS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys timeSeg testPlant testForest testQRNG testArea testTileShader testShaderFactory
+TESTS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys timeSeg testPlant testForest testQRNG testArea testTileShader testShaderFactory testWFMath
 
 INCLUDES = -I$(top_srcdir)
 
 DISTCLEANFILES = test1.pgm test2.pgm
 
-check_PROGRAMS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys timeSeg testPlant testForest testQRNG testArea testTileShader testShaderFactory
+check_PROGRAMS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys timeSeg testPlant testForest testQRNG testArea testTileShader testShaderFactory testWFMath
 
 mercatortest_SOURCES = main.cpp
 mercatortest_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
@@ -44,3 +44,4 @@ testTileShader_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
 testShaderFactory_SOURCES = testShaderFactory.cpp
 testShaderFactory_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
 
+testWFMath_SOURCES = testWFMath.cpp
